--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
 
 jobs:
   include:
+  - name: "checks"
+    script:
+    - docker run -v `pwd`:`pwd` -w `pwd` --cap-add=SYS_PTRACE -t rusdevops/bootstrap-cpp scripts/checks.sh
   - name: "tests"
     script:
     - docker run -v `pwd`:`pwd` -w `pwd` -t rusdevops/bootstrap-cpp scripts/tests.sh
