--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,24 +29,28 @@ hunter_add_package(nlohmann_json)
 find_package(GTest CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-add_library(lab-01-parser STATIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/sources/json.cpp
-        sources/n_json.cpp)
+add_library(Json STATIC
+  ${CMAKE_CURRENT_SOURCE_DIR} /sources/n_json.cpp)
 add_executable(tests
   ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-)
-
-add_executable(n_json sources/n_json.cpp)
-
-target_include_directories(lab-01-parser
+        )
+add_executable(Json
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/n_json.cpp
+        )
+add_executable(main
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
+        )
+target_include_directories(Json
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+        $<INSTALL_INTERFACE:include>
 )
 target_include_directories(tests 
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_link_libraries(tests GTest::main lab-01-parser)
-target_link_libraries(n_json PUBLIC nlohmann_json)
+target_link_libraries(tests Json GTest::main)
+target_link_libraries(Json PUBLIC nlohmann_json::nlohmann_json)
+target_link_libraries(source Json)
 enable_testing()
 add_test(NAME unit_tests COMMAND tests)
 
@@ -54,7 +58,7 @@ if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(codecov)
-  add_coverage(lab-01-parser)
+  add_coverage(Json)
   add_coverage(tests)
   list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
   coverage_evaluate()
