--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,25 +29,27 @@ hunter_add_package(nlohmann_json)
 find_package(GTest CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-add_library(Json STATIC
+add_library(lab-01-parser STATIC
   ${CMAKE_CURRENT_SOURCE_DIR} /sources/n_json.cpp include/nlohmann.hpp)
 add_executable(tests
   ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-        include/nlohmann.hpp)
+        include/nlohmann.hpp
+)
 add_executable(source
         ${CMAKE_CURRENT_SOURCE_DIR}/sources/n_json.cpp
-        include/nlohmann.hpp)
-target_include_directories(Json
+        include/nlohmann.hpp
+)
+target_include_directories(lab-01-parser
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-        $<INSTALL_INTERFACE:include>
+        nlohmann_json::nlohmann_json
 )
 target_include_directories(tests 
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+        nlohmann_json::nlohmann_json
 )
 
-target_link_libraries(tests Json GTest::main)
-target_link_libraries(Json PUBLIC nlohmann_json::nlohmann_json)
-target_link_libraries(source Json)
+target_link_libraries(tests Json GTest::main nlohmann_json::nlohmann_json lab-01-parser)
+
 enable_testing()
 add_test(NAME unit_tests COMMAND tests)
 
@@ -55,7 +57,7 @@ if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(codecov)
-  add_coverage(source)
+  add_coverage(lab-01-parser)
   add_coverage(tests)
   list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
   coverage_evaluate()
