--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 option(BUILD_COVERAGE "Build coverage" OFF)
 
 set(
-  HUNTER_CACHE_SERVERS
-  "https://github.com/bmstu-iu8-cpp-sem-3/hunter-cache"
-  CACHE STRING "Default cache server"
+        HUNTER_CACHE_SERVERS
+        "https://github.com/bmstu-iu8-cpp-sem-3/hunter-cache"
+        CACHE STRING "Default cache server"
 )
 
 include("tools/gate/cmake/HunterGate.cmake")
 
 HunterGate(
-  URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
-  SHA1 "9a3594a61227967fb92159339ba326701b287b19"
+        URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
+        SHA1 "9a3594a61227967fb92159339ba326701b287b19"
 )
 
 
@@ -25,26 +25,27 @@ string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
 string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 
 hunter_add_package(GTest)
-hunter_add_package(nlohmann_json)
 find_package(GTest CONFIG REQUIRED)
+hunter_add_package(nlohmann_json)
 find_package(nlohmann_json CONFIG REQUIRED)
 
 add_library(lab-01-parser STATIC
-  ${CMAKE_CURRENT_SOURCE_DIR} /sources/nomer3.cpp
-)
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/json.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/nomer3.cpp
+        include/nlohmann.hpp)
+
 add_executable(tests
-  ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-        /sources/nomer3.cpp
-)
+        ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
+        include/nlohmann.hpp)
 
 target_include_directories(lab-01-parser
-  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
         nlohmann_json::nlohmann_json
-)
-target_include_directories(tests 
-  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+        )
+target_include_directories(tests
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
         nlohmann_json::nlohmann_json
-)
+        )
 
 target_link_libraries(tests PUBLIC GTest::main nlohmann_json::nlohmann_json lab-01-parser)
 
